re PR debug/2714 (Stabs truncated on AIX)

PR debug/2714
        PR bootstrap/64256
        * xcoffout.h (DBX_CONTIN_LENGTH): Define as 16384.
        (DBX_CONTIN_CHAR): Define.

From-SVN: r220501