gcc/xcoffout.h
@@ -161,8 +161,11 @@ do {							\
 /* Do not emit any marker for XCOFF until assembler allows XFT_CV.  */
 #define NO_DBX_GCC_MARKER
 
-/* Do not break .stabs pseudos into continuations.  */
-#define DBX_CONTIN_LENGTH 0
+/* XCOFF32 maximum length is 64K; XLC limits to 16K.  */
+#define DBX_CONTIN_LENGTH 16384
+
+/* XLC uses '?' as continuation character.  */
+#define DBX_CONTIN_CHAR '?'
 
 /* Don't try to use the `x' type-cross-reference character in DBX data.
    Also has the consequence of putting each struct, union or enum
